[Bug #94875826] - Nav item spacing tightened ~10%

--- a/app/stylus/sections/nav.styl
+++ b/app/stylus/sections/nav.styl
@@ -37,7 +37,7 @@
   .nav-main-list
     a
       font-size:12px
-      margin:0 30px
+      margin:0 25px
       display: inline-block
       color: $colors-nav-primary
 
